--- a/templates/myapp/index.html
+++ b/templates/myapp/index.html
@@ -48,6 +48,33 @@
 				
 			);
 			
+			$("a.edit_post").live(
+				"click", function(){
+					
+					$.ajax({
+                        type: 'GET',
+                        url: '/api/v1/entry/'+$(this).data("post_id")+'/',
+                        success: function(data){
+							$(".console pre").append("GET SUCCESS\n");
+							$(".editpost #editBody").val(data.body);
+							$(".editpost #editPubdate").val(data.pub_date);
+							$(".editpost #editTitle").val(data.title);
+							$(".editpost #editSlug").val(data.slug);
+							$("#btneditSend").attr("data-post_id",data.id)
+							$('#editModal').modal();
+                        },
+                        error: function(data){
+							$(".console pre").append("ERROR: ");
+							$(".console pre").append(data.statusText+" ("+data.responseText+")");
+							$(".console pre").append("\n");
+                        },
+                        contentType:'application/json'
+                    });
+                    
+                    return false;
+				}
+			);
+			
             $("#btnSend").on(
                 "click", function(){
                     var user = $("#inputUser").val();
@@ -219,5 +246,43 @@
 </pre>
             </div>
     </div>
+	<div class="modal hide fade" id="editModal">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			<h3>Edit post</h3>
+		</div>
+		<div class="modal-body">
+			<form class="form-horizontal editpost">
+				<div class="control-group">
+					<label class="control-label" for="inputPubdate">Pubdate</label>
+					<div class="controls">
+						<input class="autosave" type="text" id="editPubdate" placeholder="Pubdate" value="2012-11-02T11:00:00+00:00">
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label" for="inputTitle">Title</label>
+					<div class="controls">
+						<input class="autosave" type="text" id="editTitle" placeholder="Title">
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label" for="inputSlug">Slug</label>
+					<div class="controls">
+						<input class="autosave" type="text" id="editSlug" placeholder="Slug">
+					</div>
+				</div>
+				<div class="control-group">
+					<label class="control-label" for="inputBody">Body</label>
+					<div class="controls">
+						<textarea class="autosave" rows="3" id="editBody" placeholder="Body"></textarea>
+					</div>
+				</div>
+			</form>
+		</div>
+		<div class="modal-footer">
+			<a href="#" class="btn btn-primary" id="btneditSend">Save changes</a>
+		</div>
+	</div>
+
   </body>
 </html>
